mysql-workbench/mysql-workbench-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-workbench
  labels:
    name: mysql-workbench
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
