mysql-workbench/mysql-workbench-services.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-workbench
  namespace: mysql-workbench
  labels:
    app: mysql-workbench
spec:
  type: ClusterIP
  ports:
  - name: mysql-workbench
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: mysql-workbench
