mysql-workbench/mysql-workbench-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mysql-workbench
  namespace: mysql-workbench
  labels:
    app: mysql-workbench
spec:
  entryPoints:
  - websecure
  routes:
    - match: Host(`workbench.yourdomain.com`)
      kind: Rule
      middlewares:
      - name: auth
        namespace: mysql-workbench
      services:
        - name: mysql-workbench
          port: 3000
  tls:
    certResolver: le
